--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "framer-motion": "^11.11.1",
     "gsap": "^3.12.5",
     "lenis": "^1.1.13",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "lucide-react": "^0.451.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
