--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "@gsap/react": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-spring/web": "^9.7.5",
     "@splinetool/react-spline": "^4.0.0",
     "@studio-freight/react-lenis": "^0.0.47",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.11.1",
+    "framer-motion": "^11.18.2",
     "gsap": "^3.12.5",
     "lenis": "^1.1.13",
     "locomotive-scroll": "^5.0.0-beta.21",
     "lucide-react": "^0.451.0",
+    "motion": "^12.5.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
